refactor: use getFirst() instead of get(0) in ClusteringServiceTest (#11)
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>